[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-trading-bot"
version = "1.0.0"
description = "Binance Trading Bot with WebSocket support and price analysis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Marius", email = "marius@example.com"}
]
license = {text = "MIT"}
keywords = ["binance", "trading", "cryptocurrency", "bot", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "python-binance>=1.0.0",
    "PyNaCl>=1.5.0",
    "websocket-client>=1.7.0",
    "websockets>=16.0",
    "requests>=2.31.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
monitoring = [
    "langfuse>=2.0.0",
]
all = [
    "binance-trading-bot[dev,monitoring]",
]

[project.urls]
Homepage = "https://github.com/mariusv/binance-trading-bot"
Repository = "https://github.com/mariusv/binance-trading-bot.git"

[tool.setuptools]
py-modules = [
    "alert",
    "assetguardian",
    "bapi",
    "bapi_allorders",
    "bapi_client",
    "bapi_placeorder",
    "bapi_trades",
    "bapi_ws",
    "cacheManager",
    "cleanup",
    "config",
    "drawprices",
    "generateweb",
    "log",
    "monitororder",
    "monitortrades",
    "news",
    "priceAnalysis",
    "priceprediction",
    "rtrade",
    "server",
    "shmutils",
    "symbols",
    "tradeCacheManager",
    "tradeall",
    "utils",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "logger*"]
exclude = [
    "tests*",
    "__pycache__*",
    "*.json",
    "plots*",
    "altele*",
    "sim*",
    "demon*",
    "media*",
    "systemd*",
    "keys*",
]

[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | \.pytest_cache
  | cache_.*\.json
  | plots
  | altele
  | sim
)/
'''

[tool.ruff]
line-length = 100
target-version = "py314"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false